--- a/config/crd/bases/everest.percona.com_databaseclusters.yaml
+++ b/config/crd/bases/everest.percona.com_databaseclusters.yaml
@@ -48,7 +48,8 @@ spec:
                       description: |-
                         Internal field, this is not provided in the CRD.
                         This field is automatically populated during runtime.
-                        Contains aggregated pod spec for this componen.
+                        This contains the combined information about the component pod
+                        from the defaults in the DatabaseClusterDefinition.
                       properties:
                         additionalVolumeClaimTemplates:
                           items:
